--- a/jackets-specific.html
+++ b/jackets-specific.html
@@ -26,8 +26,8 @@
         <input type="checkbox" id="hamburger-menu" />
         <nav>
           <ul>
-            <li><a href="index.html" class="activenav">Home</a></li>
-            <li><a href="jackets.html">Products</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="jackets.html" class="activenav">Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
@@ -55,40 +55,8 @@
     <main>
       <div class="main-content">
         <div class="item">
-          <div class="item jacket">
-            <div class="product-large">
-              <img src="images/kal-visuals-swFhUaDUVl0-unsplash.jpg" alt="Jones Jackets Red outdoor"
-                class="products__image__large">
-              <a href="jackets.html" class="back-button"><span class="material-icons">arrow_back</span></a>
-              <div class="products__image_thumb">
-                <div>
-                  <img src="images/kal-visuals-X8oLaedw-OI-unsplash.jpg" alt="Jones Jackets Red outdoor" />
-                </div>
-                <div>
-                  <img src="images/kal-visuals-X8oLaedw-OI-unsplash.jpg" alt="Jones Jackets Red outdoor" />
-                </div>
-                <div>
-                  <img src="images/kal-visuals-X8oLaedw-OI-unsplash.jpg" alt="Jones Jackets Red outdoor" />
-                </div>
-              </div>
-              <div class="price-cta">
-                <div class="add-to-cart">
-                  <h1>1290,- NOK</h1>
-                </div>
-                <div class="add-to-cart-buy">
-                  <div class="links"><a href="jackets-specific-cart.html" class="cta">Add to cart</a></div>
-                </div>
-              </div>
-              <div class="product-text">
-                <h2>Jones Jackets</h2>
-                <p>Red outdoor v3</p>
-                <p>This jacket from Jones Jacket is of top quality. It's both wind & rain secure and is to ultimate best
-                  hiking jacket and the market right now.</p>
-                <p>The jacket is waterproff- Water column of at least 10,000 millimeter of water. Ventilation flap at
-                  the top of the back releases excess heat inside the jacket.</p>
-              </div>
-              </a>
-            </div>
+          <div class="load"></div>
+          <div class="item jacket-list">
         </div>
       </div>
     </main>
@@ -131,6 +99,6 @@
       </div>
     </footer>
 
-    <script src="js/productCard.js" type="module"></script>
+    <script src="js/jackets-specific.js" type="module"></script>
   </body>
 </html>
