Update of specific jackets and API key + secret

--- a/jackets-specific.html
+++ b/jackets-specific.html
@@ -56,7 +56,7 @@
       <div class="main-content">
         <div class="item">
           <div class="load"></div>
-          <div class="item jacket-list">
+          <div class="item specific">
         </div>
       </div>
     </main>
