Big updates of all

--- a/jackets.html
+++ b/jackets.html
@@ -60,8 +60,8 @@
               <h2>Category</h2>
             </li>
             <li>
-              <label for="popular" class="button-style"><span>Popular jackets</span></label>
-              <input  class="category-menu" type="checkbox" name="category" id="popular" value="true">
+              <label for="featured" class="button-style"><span>Popular jackets</span></label>
+              <input  class="category-menu" type="checkbox" name="category" id="featured" value="true">
             </li>
             <li>
               <label for="men" class="button-style"><span>Men jackets</span></label>
@@ -79,7 +79,7 @@
               <select class="per-page-selection">
                 <option value="3">Three</option>
                 <option value="6">Six</option>
-                <option value="All">All</option>
+                <option value="10">All</option>
               </select>
             </div>
           </div>
