--- a/jackets.html
+++ b/jackets.html
@@ -7,6 +7,7 @@
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/jackets.css" rel="stylesheet" />
     <link href="css/loading.css" rel="stylesheet" />
+    <link href="css/error.css" rel="stylesheet" />
     <link href="css/media.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
