--- a/jackets.html
+++ b/jackets.html
@@ -55,6 +55,7 @@
     </header>
     <main>
       <div class="main-content">
+        <div class="sorted"></div>
         <div class="item menu category">
           <ul>
             <li class="top">
